--- a/res/layout/mediaplayer.xml
+++ b/res/layout/mediaplayer.xml
@@ -1,13 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical" >
 
-<SurfaceView
-    android:id="@+id/surface"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center" />
-
-</LinearLayout>
+    <merge
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:okCancelBar="http://schemas.android.com/apk/res/com.example.android.merge">
+	    
+		<SurfaceView
+		    android:id="@+id/surface"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_gravity="center" />
+	
+		
+		 <LinearLayout
+	     android:id="@+id/ly"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_gravity="bottom|center_horizontal"
+	    android:paddingBottom="25dp" >
+	    
+		     	<TextView android:id="@+id/txt"
+	   			 android:layout_width="wrap_content"
+	   			 android:layout_height="wrap_content"
+	   			 android:layout_gravity="bottom" />
+		     	
+	     </LinearLayout>
+	 
+	 </merge>
